--- a/config/database.yml
+++ b/config/database.yml
@@ -19,13 +19,13 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   port: 5432
+  username: root
+  password: password
+  host: db
 
 development:
   <<: *default
   database: reminist_app_development
-  username: root
-  password: password
-  host: db
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -81,8 +81,8 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-production:
-  <<: *default
-  database: app_production
-  username: app
-  password: <%= ENV["APP_DATABASE_PASSWORD"] %>
+# production:
+#   <<: *default
+#   database: app_production
+#   username: app
+#   password: <%= ENV["APP_DATABASE_PASSWORD"] %>
