--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,8 @@ jobs:
 
       - name: db migrate
         run: |
+          cp config/database.yml.ci config/database.yml
+          bundle exec rails db:create
           bundle exec rails db:migrate
 
       - name: verify
