--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,6 @@ jobs:
           bundler-cache: true
       - uses: reviewdog/action-rubocop@v2
         with:
-          reporter: github-pr-check
+          reporter: github-pr-review
           skip_install: true
           use_bundler: true
