--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ tmp/storage/*
 
 # Ignore master key for decrypting credentials and more.
 config/master.key
+
+/config/credentials/development.key
